# agent-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: eval_cases.py  kb_search.py
src/agent_harness/: __init__.py  evals.py  tools.py  trace.py
tests/: test_evals.py  test_tools.py  test_trace.py
