[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness"
version = "0.1.0"
description = "A small harness that makes LLM-agent tool use testable: typed tools, readable traces, regression evals."
readme = "README.md"
authors = [{ name = "Théo Alessandro Hermann" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/thrmnn/agent-harness"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
